@@ -13,6 +13,8 @@ The following bugs have been fixed in the 1.4.2 release.
 6629213	base64 encoder sometimes omits CRLF
 <no id>	ignore socket timeout while waiting in IMAP IDLE
 <no id>	fix bug in MailDateFormat parsing in non-lenient mode
+<no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
+	empty multiparts (see javax.mail.internet.MimeMultipart)
 
 
 		  CHANGES IN THE 1.4.1 RELEASE
